# dz_17

./: .gitignore  README.md  pyproject.toml
data/: constant.py
src/: errors.py
src/models/: get_response.py  post_response.py  put_response.py  schemas.py
tests/: test_delete.py  test_get.py  test_post.py  test_put.py  test_response_shemas.py
